--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,6 @@ body{
 }
 
 
-.weather-app{
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #dadde1;
-    border-radius: 10px;
-}
 
 
 h1{
@@ -30,9 +23,45 @@ li {
 list-style: none;
 margin: 0;
 padding: 0;
-color rgb(135, 135, 135);
-font-size 16px;
-font-weight 100;
-line-height 19px;
+color: rgb(135, 135, 135);
+font-size: 16px;
+font-weight: 100;
+line-height: 19px;
 
+}
+
+.weather-app-wrapper {
+     max-width: 600px;
+    margin: 30px auto;
+}
+
+.weather-app {
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 10px;
+}
+
+.overview {
+    margin-bottom: 20px;
+}
+
+.weather-temperature img {
+    margin-right: 10px;
+    height: 64px;
+    width: 64px;
+}
+
+.weather-temperature strong {
+    color: rgb (33,33,33);
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+
+
+.weather-temperature.units{
+ position: relative;
+    font-size: 16 px;
+    top: -34px;
 }
