--- a/src/style.css
+++ b/src/style.css
@@ -27,9 +27,15 @@ color: rgb(135, 135, 135);
 font-size: 16px;
 font-weight: 100;
 line-height: 19px;
-text-transform: capitalize;
+
 
 }
+
+
+li:first-letter {
+    text-transform: capitalize;
+}
+
 
 .weather-app-wrapper {
      max-width: 600px;
