--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ li:first-letter {
     margin-top: 20px;
     text-align: center;
     color: #000;
+    font-weight: 10px;
 }
 
 .weather-forecast-date {
