--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: arial, sans-serif;
   background: linear-gradient(to bottom right,
- 
   #A084DC, 
   #CB89CF, 
   #F59DB9, 
@@ -13,12 +12,22 @@ body {
   );
 }
 
+
 h1 {
   color: #878787;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
   margin-bottom: 0;
+}
+
+.search-bar {
+ background:#F59DB9;
+  
+  padding: 5px;
+  border-radius: 5px;
+  width: 350px;
+  border: 1px solid #dadde1;
 }
 
 ul {
