--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,11 @@
 body {
   font-family: arial, sans-serif;
   background: linear-gradient(to bottom right,
-  #A084DC, 
-  #CB89CF, 
-  #F59DB9, 
-  #F4A8AF, 
-  #F4B59E, 
+  #EEAAAB,
+  #EFA9A9,
   #F4C197,
-  #EFC786 
-  
+  #EFC786,
+  #F4DFAC
   );
 }
 
@@ -22,12 +19,15 @@ h1 {
 }
 
 .search-bar {
- background:#F59DB9;
-  
+ background: #F4C197;
   padding: 5px;
   border-radius: 5px;
   width: 350px;
   border: 1px solid #dadde1;
+}
+
+button {
+  background-color: #F4DFAC;
 }
 
 ul {
