search bar and button to stay fixed

--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,12 @@ h1 {
   border-radius: 5px;
   width: 350px;
   border: 1px solid #dadde1;
+  position: fixed;
 }
 
 button {
   background-color: #F4DFAC;
+   position: fixed;
 }
 
 ul {
